# Software_engineering

./: .bash_history  .releaserc  CMakeLists.txt  Dockerfile  envoie_sur_git.bat  hello.cpp
.github/workflows/: CD.yml  CI.yml  cmake-multi-platform.yml  semantic_release.yml
install/include/: HelloProjConfig.h
main/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-version.cpp
