cmake_minimum_required(VERSION 3.10)

# set the project name
project(HelloProj VERSION 2.1)

# specify the C++ standard
# use the CMAKE_CXX_STANDARD variable
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)

#export configuration to source code
configure_file(cmake/HelloProjConfig.h.in HelloProjConfig.h)

#add libraries
add_subdirectory(src/basic)

#add executable
option(HELLOWORD_WITH_EXECUTABLES "Compile main" ON)
if(HELLOWORD_WITH_EXECUTABLES)
	message(STATUS "Configuring Hello World with executables")
	add_subdirectory(main)
endif()

#add tests
option(HELLOWORD_WITH_TESTS "Compile tests" ON)
if(HELLOWORD_WITH_TESTS)
	enable_testing()
	message(STATUS "Configuring Hello World with tests")
	add_subdirectory(tests)
endif()

# create the package configuration file
include(CMakePackageConfigHelpers)
configure_package_config_file(
	cmake/HelloProjConfig.cmake.in
	HelloProjConfig.cmake
	INSTALL_DESTINATION cmake/
)